<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mapInfoWindow"
    android:layout_width="130dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/mapInfoWeatherIcon"
        android:layout_width="@dimen/info_window_weather_icon_size"
        android:layout_height="@dimen/info_window_weather_icon_size"
        android:layout_margin="@dimen/small_margin"
        android:contentDescription="@string/weather_icon_description"
        android:src="@drawable/ic_baseline_wb_sunny_24"
        app:layout_constraintEnd_toStartOf="@+id/mapInfoTemperature"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/mapInfoTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/current_temperature"
        android:textSize="@dimen/info_window_temperature_text_size"
        app:layout_constraintBottom_toTopOf="@+id/mapInfoWeatherConditionTextView"
        app:layout_constraintEnd_toStartOf="@+id/mapInfoCelsius"
        app:layout_constraintStart_toEndOf="@+id/mapInfoWeatherIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/mapInfoCelsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/celsius"
        android:textSize="@dimen/info_window_temperature_text_size"
        app:layout_constraintBottom_toTopOf="@+id/mapInfoWeatherConditionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mapInfoTemperature"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/mapInfoWeatherConditionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_condition"
        android:textAlignment="center"
        android:textSize="@dimen/info_window_condition_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mapInfoWeatherIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>